kyverno/policies/add-imagepullsecrets.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-imagepullsecrets
spec:
  rules:
  - name: add-imagepullsecret
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - <(image): "eu.gcr.io/*"
          imagePullSecrets:
          - name: gcr-json-key
